# production-rag-system

./: .gitignore  CLAUDE.md  LICENSE  Makefile
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: ask.py  auth.py  documents.py  health.py  history.py  internal.py  sessions.py
backend/app/auth/: deps.py  run.py  schemas.py  service.py
backend/app/caching/: keys.py  redis_hot.py  run.py  store.py
backend/app/core/: contracts.py  errors.py  exceptions.py  middleware.py  ratelimit.py  security.py  settings.py
backend/app/data/: index_manifest.json  sources.csv
backend/app/data/evals/: qa_dataset.jsonl
backend/app/db/: __init__.py  base.py  engine.py  enums.py  seed.py  session.py  types.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py  0002_f1_document_ingestion_fields.py  0003_f9_cache_entry_query_hash.py
backend/app/db/models/: __init__.py  auth.py  chat.py  corpus.py  evals.py  ops.py  user.py
backend/app/evals/: _ragas_compat.py  compare.py  dataset.py  flags.py  harness.py  latency.py  manifest.py  ragas_suite.py  refusal.py  report.py  retrieval.py  run.py  schemas.py
backend/app/indexing/: bm25.py  cost.py  embedder.py  manifest.py  persistence.py  run.py  schemas.py  source.py  vectorstore.py
backend/app/indexing/chunkers/: base.py  fixed.py  structure.py
backend/app/ingestion/: __init__.py  cleaning.py  downloader.py  registry.py  routing.py  run.py  schemas.py  serialize.py  status.py
backend/app/ingestion/loaders/: html.py  legacy.py  ocr.py  office.py  pdf.py
backend/app/memory/: cookies.py  service.py  stages.py  summarizer.py  tokens.py  window.py
backend/app/observability/: __init__.py  logging.py  metrics.py  request_log.py  stats.py
backend/app/rag/: baseline.py  citations.py  compression.py  context.py  errors.py  events.py  flags.py  hybrid.py  observability.py  prompt.py  refusal.py  rerank.py  retriever.py  rewrite.py  schemas.py  trace.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_ask_contract.py  test_ask_json.py  test_errors.py  test_health.py  test_no_sync_calls_observability.py  test_observability.py  test_openapi.py  test_ratelimit.py  test_read_routes.py  test_settings_schemas.py  test_timeout.py
backend/tests/auth/: conftest.py  test_acceptance.py  test_api_auth.py  test_deps.py  test_lockout.py  test_logging.py  test_matrix.py  test_no_new_migration.py  test_run.py  test_schemas.py  test_security.py  test_service.py  test_settings.py  test_swagger.py
backend/tests/cache/: conftest.py  test_adversarial.py  test_keys.py  test_migration_0003.py  test_no_sync_calls.py  test_pipeline_splice.py  test_redis_hot.py  test_run.py  test_settings_schemas.py  test_store.py  test_store_write.py
backend/tests/db/: conftest.py  test_engine_session.py  test_metadata.py  test_migrations.py  test_models_chat.py  test_models_corpus.py  test_models_evals.py  test_models_ops.py  test_models_user_auth.py  test_settings.py
backend/tests/evals/: conftest.py  test_acceptance.py  test_cache_gate.py  test_compare.py  test_dataset.py  test_fixtures.py  test_flags.py  test_harness.py  test_latency.py  test_manifest.py  test_no_sync_calls.py  test_ragas.py  test_refusal.py  test_report.py  test_retrieval.py  test_settings_schemas.py
backend/tests/fixtures/cache/: adversarial.jsonl
backend/tests/fixtures/evals/: dup_qid_dataset.jsonl  run_dataset.jsonl  valid_dataset.jsonl
backend/tests/fixtures/indexing/: docx_doc.jsonl  html_page.jsonl  pdf_digital.jsonl  pptx_deck.jsonl  pu_calendar.jsonl  xlsx_sheet.jsonl
backend/tests/fixtures/ingestion/: generate_fixtures.py  sample.docx  sample.html  sample.pptx  sample.xlsx
backend/tests/fixtures/memory/: followups.jsonl
backend/tests/fixtures/rag/: chunks.jsonl  documents.jsonl  smoke_questions.jsonl
backend/tests/indexing/: conftest.py  test_acceptance.py  test_bm25.py  test_chunker_base.py  test_chunker_fixed.py  test_chunker_structure.py  test_cost.py  test_embedder.py  test_fixtures.py  test_get_index_handshake.py  test_manifest.py  test_observability.py  test_persistence.py  test_run.py  test_settings_schemas.py  test_source.py  test_vectorstore.py
backend/tests/ingestion/: conftest.py  test_acceptance.py  test_cleaning.py  test_downloader.py  test_fixtures.py  test_html_loader.py  test_legacy_loader.py  test_migration_0002.py  test_observability.py  test_ocr.py  test_office_loader.py  test_pdf_loader.py  test_registry.py  test_routing.py  test_run.py  test_serialize.py  test_settings_schemas.py  test_status.py
backend/tests/memory/: conftest.py  test_ask_memory.py  test_cookies.py  test_followups.py  test_no_migration.py  test_no_sync_calls.py  test_service.py  test_sessions_api.py  test_settings_schemas.py  test_stages.py  test_summarizer.py  test_toggle_parity.py  test_tokens.py  test_window.py
backend/tests/rag/: conftest.py  test_acceptance.py  test_citations.py  test_compression.py  test_context.py  test_errors.py  test_fixtures.py  test_generation.py  test_hybrid.py  test_langfuse_wiring.py  test_observability.py  test_pinecone_vectorstore_async.py  test_prompt.py  test_prompt_injection.py  test_query_vec_threading.py  test_refusal.py  test_rerank.py  test_retriever.py  test_rewrite.py  test_rewrite_reuse.py  test_settings_schemas.py  test_streaming.py  test_trace.py
docker/: docker-compose.yml
docs/: ingestion_report_20260714T070655Z.md  ingestion_report_20260714T070702Z.md  ingestion_report_20260714T070708Z.md  ingestion_report_20260714T070715Z.md  ingestion_report_20260714T070948Z.md  ingestion_report_20260717T100616Z.md  ingestion_report_20260717T102626Z.md  ingestion_report_20260718T063638Z.md  ingestion_report_20260718T130902Z.md  ingestion_report_20260718T131531Z.md  ingestion_report_20260718T131545Z.md  ingestion_report_20260718T163909Z.md  ingestion_report_20260720T103240Z.md
frontend/: .env.example  .env.mock  eslint.config.js  index.html  lighthouserc.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  (+1 more)
(+113 files in other folders)
