[project]
name = "campus-rag-backend"
version = "0.1.0"
description = "CampusRAG backend — F12 persistence layer subset"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "email-validator==2.2.0",
    "anyio==4.7.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",  # passlib 1.7.4 doesn't support bcrypt>=4.1 (removed __about__.__version__)
    "httpx==0.28.1",  # also used directly by app.ingestion.downloader (F1)
    # --- ingestion (F1) ---
    "langchain-community==0.4.2",  # document loaders: PyMuPDF/Unstructured*/BSHTML
    "langchain-core==1.4.9",       # Document schema
    "unstructured[docx,pptx,xlsx,md]==0.24.1",
    "pymupdf==1.28.0",
    "beautifulsoup4==4.15.0",
    "lxml==6.1.1",
    "aiofiles==25.1.0",
    "tenacity==9.1.4",
    "structlog==26.1.0",
    "python-docx==1.2.0",
    "python-pptx==1.0.2",
    "openpyxl==3.1.5",
    "pandas==2.3.3",  # xlsx row-wise iteration + fixture generation
    # ocrmypdf / libreoffice are external CLI binaries invoked via subprocess in the Docker
    # ingestion image (design.md §4) — not Python-importable deps, not installed here.
    # --- Chunking & Indexing (F2) ---
    "tiktoken==0.13.0",
    "rank-bm25==0.2.2",
    "langchain-text-splitters==1.1.2",
    "langchain-openai==1.3.5",
    "langchain-pinecone==0.2.13",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC"]
